index-update-1 / style-update-3 / script-update-1

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Recipe Book</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -16,10 +17,28 @@
 
 <body>
 
-  <div id="navbar"></div>
+  <div id="navbar">
+    <div id="main-logo">Recipe Book</div>
+  </div>
 
   <div id="body-grid-container">
-    <h1 id="main-recipe-header">My Recipes</h1>
+    <div id="category-container">
+      <div class="category-text">Recipes:</div>
+      <ul>
+        <li class="category-text category-item category-active" id="cat-all">All</li>
+        <li class="category-text category-item" id="cat-beef">Beef</li>
+        <li class="category-text category-item" id="cat-pork">Pork</li>
+        <li class="category-text category-item" id="cat-poultry">Poultry</li>
+        <li class="category-text category-item" id="cat-seafood">Seafood</li>
+        <li class="category-text category-item" id="cat-veg">Vegetarian</li>
+      </ul>
+    </div>
+
+    <select id="sort-by-button" value="">
+      <option value="" disabled selected>SORT BY</option>
+      <option value="">Alpha (A-Z)</option>
+      <option value="">Alpha (Z-A)</option>
+    </select>
 
     <div class="tile" id="tile-0">
       <h3 class="tile-header" id="tile-header-0"></h3>
