index-update-2 / style-update-4

--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
 
   <div id="body-grid-container">
     <div id="category-container">
-      <div class="category-text">Recipes:</div>
       <ul>
-        <li class="category-text category-item category-active" id="cat-all">All</li>
-        <li class="category-text category-item" id="cat-beef">Beef</li>
-        <li class="category-text category-item" id="cat-pork">Pork</li>
-        <li class="category-text category-item" id="cat-poultry">Poultry</li>
-        <li class="category-text category-item" id="cat-seafood">Seafood</li>
-        <li class="category-text category-item" id="cat-veg">Vegetarian</li>
+        <div id="category-row-top">
+          <li class="category-item category-active" id="cat-all">All</li>
+          <li class="category-item" id="cat-beef">Beef</li>
+          <li class="category-item" id="cat-pork">Pork</li>
+        </div>
+        <div id="category-row-bottom">
+          <li class="category-item" id="cat-poultry">Poultry</li>
+          <li class="category-item" id="cat-seafood">Seafood</li>
+          <li class="category-item" id="cat-veg">Vegetarian</li>
+        </div>
       </ul>
     </div>
 
