index-update-3 / style-update-5

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <select id="sort-by-button" value="">
       <option value="" disabled selected>SORT BY</option>
-      <option value="">Alpha (A-Z)</option>
-      <option value="">Alpha (Z-A)</option>
+      <option value="">Alphabetical (A-Z)</option>
+      <option value="">Alphabetical (Z-A)</option>
     </select>
 
     <div class="tile" id="tile-0">
