--- a/index.html
+++ b/index.html
@@ -59,10 +59,22 @@
       <h3 class="tile-header" id="tile-header-3"></h3>
     </div>
 
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
+    <div class="tile" id="tile-4">
+      <h3 class="tile-header" id="tile-header-4"></h3>
+    </div>
+
+    <div class="tile" id="tile-5">
+      <h3 class="tile-header" id="tile-header-5"></h3>
+    </div>
+
+    <div class="tile" id="tile-6">
+      <h3 class="tile-header" id="tile-header-6"></h3>
+    </div>
+
+    <div class="tile" id="tile-7">
+      <h3 class="tile-header" id="tile-header-7"></h3>
+    </div>
+
   </div>
 
 </body>
