index-update-6 / style-update-8

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <body>
 
   <div id="navbar">
+    <div id="hamburger-menu">
+      <div class="hamburger-bar"></div>
+      <div class="hamburger-bar"></div>
+      <div class="hamburger-bar"></div>
+    </div>
+
     <div id="main-logo">Recipe Book</div>
   </div>
 
