index-update-7 / style-update-9

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Recipe Book</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -25,6 +26,8 @@
     </div>
 
     <div id="main-logo">Recipe Book</div>
+
+    <i id="search-icon" class="fa fa-search" aria-hidden="true"></i>
   </div>
 
   <div id="body-grid-container">
