index-update-8 / style-update-12 / script-update-13

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <i id="search-icon" class="fa fa-search" aria-hidden="true"></i>
   </div>
 
+  <div class="hidden" id="navbar-dropdown">
+    <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
+    <div id="dropdown-spacer"></div>
+    <div class="dropdown-button" id="dropdown-right">Find New Recipes</div>
+  </div>
+
   <div id="body-grid-container">
     <div id="category-container">
       <ul>
