--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <i id="search-icon" class="fa fa-search" aria-hidden="true"></i>
   </div>
 
-  <div class="hidden" id="navbar-dropdown">
+  <div id="navbar-dropdown">
     <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
     <div id="dropdown-spacer"></div>
     <div class="dropdown-button" id="dropdown-right">Find New Recipes</div>
