index-update-10 / style-update-14 / script-update-15

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <div class="dropdown-button" id="dropdown-right">Find New Recipes</div>
   </div>
 
+  <div id="search-dropdown">
+    <input id="search-bar" type="text" placeholder="Search My Saved Recipes..." />
+  </div>
+
   <div id="body-grid-container">
     <div id="category-container">
       <ul>
