index-update-11 / style-update-15 / script-update-17

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <div id="navbar">
     <div id="hamburger-menu">
-      <div class="hamburger-bar"></div>
-      <div class="hamburger-bar"></div>
-      <div class="hamburger-bar"></div>
+      <div class="hamburger-bar" id="hamburger-bar-top"></div>
+      <div class="hamburger-bar" id="hamburger-bar-middle"></div>
+      <div class="hamburger-bar" id="hamburger-bar-bottom"></div>
     </div>
 
     <div id="main-logo">Recipe Book</div>
