index-update-12 / style-update-17 / script-update-18

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <div id="main-logo">Recipe Book</div>
 
     <i id="search-icon" class="fa fa-search" aria-hidden="true"></i>
+    <div id="search-close-icon" class="hide-search-icon">
+      <div class="hamburger-bar" id="search-close-bar-top"></div>
+      <div class="hamburger-bar hide-bar-middle"></div>
+      <div class="hamburger-bar" id="search-close-bar-bottom"></div>
+    </div>
   </div>
 
   <div id="navbar-dropdown">
