index-update-13 / style-update-18

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
   </div>
 
   <div id="search-dropdown">
-    <input id="search-bar" type="text" placeholder="Search My Saved Recipes..." />
+    <div id="search-bar-container">
+      <input id="search-bar" type="text" placeholder="Search My Saved Recipes..." />
+      <i id="search-icon-dropdown" class="fa fa-search" aria-hidden="true"></i>
+    </div>
   </div>
 
   <div id="body-grid-container">
