index-update-15 / style-update-25 / script-update-21

--- a/recipes/template.html
+++ b/recipes/template.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="../style.css">
-  <link rel="stylesheet" type="text/css" href="recipePageStyle.css">
+  <link rel="stylesheet" type="text/css" href="../main-style.css">
+  <link rel="stylesheet" type="text/css" href="recipe-page-style.css">
   <title>Recipe Book</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous">
   </script>
-  <script type="text/javascript" src="../recipeListMaster.js" defer></script>
-  <!-- <script type="text/javascript" src="../script.js" defer></script> -->
+  <script type="text/javascript" src="../recipe-list-master.js" defer></script>
+  <!-- <script type="text/javascript" src="../main-script.js" defer></script> -->
 </head>
 
 <body>
@@ -52,7 +52,7 @@
   <div id="body-grid-container">
     <div id="recipe-title-container"></div>
     <div id="ingredient-container"></div>
-    <div id="image-container"></div>  
+    <div id="image-container"></div>
     <div id="instruction-container"></div>
   </div>
 
