--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -14,7 +14,8 @@
     crossorigin="anonymous">
   </script>
   <script type="text/javascript" src="../recipe-list-master.js" defer></script>
-  <!-- <script type="text/javascript" src="../main-script.js" defer></script> -->
+  <script type="text/javascript" src="../main-script.js" defer></script>
+  <script type="text/javascript" src="../navbar-script.js" defer></script>
   <script type="text/javascript" src="recipe-page-script.js" defer></script>
 </head>
 
