index-update-18 / style-update-30

--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -39,7 +39,9 @@
   </div>
 
   <div id="navbar-dropdown">
-    <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
+    <a href="../index.html">
+      <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
+    </a>
     <div id="dropdown-spacer"></div>
     <div class="dropdown-button" id="dropdown-right">Find New Recipes</div>
   </div>
