--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -39,7 +39,9 @@
   </div>
 
   <div id="navbar-dropdown">
-    <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
+    <a href="../index.html">
+      <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
+    </a>
     <div id="dropdown-spacer"></div>
     <div class="dropdown-button" id="dropdown-right">Find New Recipes</div>
   </div>
