--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -55,9 +55,33 @@
 
   <div id="body-grid-container">
     <div id="recipe-title-container"></div>
-    <div id="ingredient-container"></div>
+    <div id="ingredient-container">
+      <div id="ingredient-title">Ingredients</div>
+
+      <div id="ingredient-list-left">
+        <ul>
+          <li>- 3 lbs. chicken thighs</li>
+          <li>- 1/2 cup olive oil</li>
+          <li>- 3 tbsp. white vinegar</li>
+          <li>- 1 tbsp. salt</li>
+          <li>- 1 tbsp. white sugar</li>
+        </ul>
+      </div>
+
+      <div id="ingredient-list-right">
+        <ul>
+          <li>- 1 tsp. red pepper flakes</li>
+          <li>- 1 cup ketchup</li>
+          <li>- 1/4 cup brown sugar</li>
+          <li>- 2 tbsp. paprika</li>
+          <li>- 1 tbsp. chili powder</li>
+        </ul>
+      </div>
+    </div>
     <div id="image-container"></div>
-    <div id="instruction-container"></div>
+    <div id="recipe-container">
+      <div id="recipe-title">Recipe</div>
+    </div>
   </div>
 
 </body>
