index-update-21 / style-update-33 / script-update-25

--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -58,26 +58,16 @@
     <div id="ingredient-container">
       <div id="ingredient-title">Ingredients</div>
 
-      <div id="ingredient-list-left">
-        <div class="ingredient-list-container">
-          <ul>
-            <li>- 3 lbs. chicken thighs</li>
-            <li>- 1/2 cup olive oil</li>
-            <li>- 3 tbsp. white vinegar</li>
-            <li>- 1 tbsp. salt</li>
-            <li>- 1 tbsp. white sugar</li>
+      <div id="ingredient-list-container-left">
+        <div class="ingredient-list-container-inner">
+          <ul id="ingredient-list-left">
           </ul>
         </div>
       </div>
 
-      <div id="ingredient-list-right">
-        <div class="ingredient-list-container">
-          <ul>
-            <li>- 1 tsp. red pepper flakes</li>
-            <li>- 1 cup ketchup</li>
-            <li>- 1/4 cup brown sugar</li>
-            <li>- 2 tbsp. paprika</li>
-            <li>- 1 tbsp. chili powder</li>
+      <div id="ingredient-list-container-right">
+        <div class="ingredient-list-container-inner">
+          <ul id="ingredient-list-right">
           </ul>
         </div>
       </div>
