--- a/recipes/chili-con-carne.html
+++ b/recipes/chili-con-carne.html
@@ -55,9 +55,41 @@
 
   <div id="body-grid-container">
     <div id="recipe-title-container"></div>
-    <div id="ingredient-container"></div>
+    <div id="ingredient-container">
+      <div id="ingredient-title">Ingredients</div>
+
+      <div id="ingredient-list-container-left">
+        <div class="ingredient-list-container-inner">
+          <ul id="ingredient-list-left">
+          </ul>
+        </div>
+      </div>
+
+      <div id="ingredient-list-container-right">
+        <div class="ingredient-list-container-inner">
+          <ul id="ingredient-list-right">
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <div id="image-container"></div>
-    <div id="instruction-container"></div>
+
+    <div id="recipe-container">
+      <div id="recipe-title">Recipe</div>
+      <ul>
+        <li class="recipe-step">1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar libero a ligula bibendum, id volutpat odio aliquet.</li>
+        <li class="recipe-step">2. Nam odio arcu, interdum sit amet cursus et, hendrerit vitae sapien. Quisque eu enim metus. Quisque dignissim vestibulum dui sit amet tempus.</li>
+        <li class="recipe-step">3. Donec malesuada elit vel accumsan lacinia. Suspendisse ut imperdiet felis, pharetra ornare urna.</li>
+        <li class="recipe-step">4. Aenean ac lacinia justo. Nullam a odio eget velit sollicitudin eleifend non vel sem. Quisque porttitor venenatis nisi, in consectetur metus porta non.</li>
+        <li class="recipe-step">5. Vivamus iaculis tempus consequat. Aenean facilisis elit ac tortor faucibus varius. Aenean leo enim, consectetur ut elementum ac, consequat nec nisi.</li>
+        <li class="recipe-step">6. Sed feugiat laoreet neque, cursus mattis nibh tincidunt et. Ut sit amet pulvinar leo.</li>
+        <li class="recipe-step">7. Maecenas in blandit lorem. Fusce placerat molestie maximus. Nunc sit amet turpis nec dolor gravida placerat nec sed purus. Sed sed sollicitudin neque.</li>
+        <li class="recipe-step">8. Sed sit amet massa rhoncus, ultricies ipsum nec, molestie nisi.</li>
+        <li class="recipe-step">9. Morbi aliquet nec nunc a egestas. Duis convallis sollicitudin sollicitudin. In id sem nec nisi consectetur posuere semper sit amet massa.</li>
+        <li class="recipe-step">10. Donec in rutrum ligula, sit amet feugiat elit.</li>
+      </ul>
+    </div>
   </div>
 
 </body>
