index-update-22 / style-update-35 / script-update-26

--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -58,6 +58,13 @@
     <div id="ingredient-container">
       <div id="ingredient-title">Ingredients</div>
 
+      <div id="ingredient-list-container-all">
+        <div class="ingredient-list-container-inner">
+          <ul id="ingredient-list-all">
+          </ul>
+        </div>
+      </div>
+
       <div id="ingredient-list-container-left">
         <div class="ingredient-list-container-inner">
           <ul id="ingredient-list-left">
