index-update-24 / style-update-39

--- a/recipes/chili-con-carne.html
+++ b/recipes/chili-con-carne.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../main-style.css">
   <link rel="stylesheet" type="text/css" href="recipe-page-style.css">
