--- a/recipes/chili-con-carne.html
+++ b/recipes/chili-con-carne.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="shortcut icon" type="image/x-icon" href="https://res.cloudinary.com/dtwyohvli/image/upload/v1546541467/recipe-book/recipe-book-favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300">
