--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -8,6 +8,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="shortcut icon" type="image/x-icon" href="https://res.cloudinary.com/dtwyohvli/image/upload/v1546541467/recipe-book/recipe-book-favicon.ico">
   <link rel="manifest" href="../manifest.json">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dtwyohvli/image/upload/v1546564259/recipe-book/recipe-book-touch-icon-ios.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300">
