--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script type="text/javascript" src="navbar-script.js" defer></script>
 </head>
 
-<body>
+<body id="main-body">
 
   <div id="apple-mobile-status-bar-background"></div>
 
