index-update-35 / style-update-43 / script-update-27

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script type="text/javascript" src="navbar-script.js" defer></script>
 </head>
 
-<body id="main-body">
+<body>
 
   <div id="apple-mobile-status-bar-background"></div>
 
