--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
 <body>
 
-  <div id="apple-mobile-status-bar-background-absolute"></div>
-  <div id="apple-mobile-status-bar-background-fixed"></div>
+  <!-- <div id="apple-mobile-status-bar-background"></div> -->
 
   <div id="navbar">
     <div id="hamburger-menu">
