index-update-38 / style-update-49

--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -28,6 +28,8 @@
 
 <body>
 
+  <div id="apple-mobile-status-bar-background"></div>
+
   <div id="navbar">
     <div id="hamburger-menu">
       <div class="hamburger-bar" id="hamburger-bar-top"></div>
