--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-  <!-- <div id="apple-mobile-status-bar-background"></div> -->
+  <div id="apple-mobile-status-bar-background"></div>
 
   <div id="navbar">
     <div id="hamburger-menu">
