--- a/recipes/chili-con-carne.html
+++ b/recipes/chili-con-carne.html
@@ -28,6 +28,8 @@
 
 <body>
 
+  <div id="apple-mobile-status-bar-background"></div>
+
   <div id="navbar">
     <div id="hamburger-menu">
       <div class="hamburger-bar" id="hamburger-bar-top"></div>
