--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="shortcut icon" type="image/x-icon" href="https://res.cloudinary.com/dtwyohvli/image/upload/v1546541467/recipe-book/recipe-book-favicon.ico">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dtwyohvli/image/upload/v1546564259/recipe-book/recipe-book-touch-icon-ios.png">
