--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -9,6 +9,10 @@
   <link rel="shortcut icon" type="image/x-icon" href="https://res.cloudinary.com/dtwyohvli/image/upload/v1546541467/recipe-book/recipe-book-favicon.ico">
   <link rel="manifest" href="../manifest.json">
   <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dtwyohvli/image/upload/v1546564259/recipe-book/recipe-book-touch-icon-ios.png">
+
+  <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) Splash Screen -->
+  <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="https://res.cloudinary.com/dtwyohvli/image/upload/v1546792700/recipe-book/ios-splash-750x1334.png">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300">
