--- a/recipes/chili-con-carne.html
+++ b/recipes/chili-con-carne.html
@@ -61,8 +61,10 @@
 
   <div id="search-dropdown">
     <div id="search-bar-container">
-      <input id="search-bar" type="text" placeholder="Search My Saved Recipes..." />
-      <i id="search-icon-dropdown" class="fa fa-search" aria-hidden="true"></i>
+      <form action="javascript:void(0);">
+        <input id="search-bar" type="text" placeholder="Search My Saved Recipes..." />
+        <i id="search-icon-dropdown" class="fa fa-search" aria-hidden="true"></i>
+      </form>
     </div>
   </div>
 
