index-update-44 / style-update-52 / script-update-37

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       </ul>
     </div>
 
-    <select id="sort-by-button" value="">
+    <select id="sort-by-select" value="">
       <option value="" disabled selected>SORT BY</option>
-      <option value="">Alphabetical (A-Z)</option>
-      <option value="">Alphabetical (Z-A)</option>
+      <option value="ascending">Alphabetical (A-Z)</option>
+      <option value="descending">Alphabetical (Z-A)</option>
     </select>
   </div>
 
