--- a/recipes/chili-con-carne.html
+++ b/recipes/chili-con-carne.html
@@ -31,78 +31,81 @@
 </head>
 
 <body>
+  <div id="main-content-container">
+    <div id="apple-mobile-status-bar-background"></div>
 
-  <div id="apple-mobile-status-bar-background"></div>
-
-  <div id="navbar">
-    <div id="hamburger-menu">
-      <div class="hamburger-bar" id="hamburger-bar-top"></div>
-      <div class="hamburger-bar" id="hamburger-bar-middle"></div>
-      <div class="hamburger-bar" id="hamburger-bar-bottom"></div>
-    </div>
-
-    <div id="main-logo">Recipe Book</div>
-
-    <i id="search-icon" class="fa fa-search" aria-hidden="true"></i>
-    <div id="search-close-icon" class="hide-search-icon">
-      <div class="hamburger-bar" id="search-close-bar-top"></div>
-      <div class="hamburger-bar hide-bar-middle"></div>
-      <div class="hamburger-bar" id="search-close-bar-bottom"></div>
-    </div>
-  </div>
-
-  <div id="navbar-dropdown">
-    <a href="../index.html">
-      <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
-    </a>
-    <div id="dropdown-spacer"></div>
-    <div class="dropdown-button" id="dropdown-right">Find New Recipes</div>
-  </div>
-
-  <div id="search-dropdown">
-    <div id="search-bar-container">
-      <form action="javascript:void(0);">
-        <input id="search-bar" type="text" placeholder="Search My Saved Recipes..." />
-        <i id="search-icon-dropdown" class="fa fa-search" aria-hidden="true"></i>
-      </form>
-    </div>
-  </div>
-
-  <div id="body-grid-container">
-    <div id="recipe-title-container"></div>
-    <div id="ingredient-container">
-      <div id="ingredient-title">Ingredients</div>
-
-      <div id="ingredient-list-container-all">
-        <div class="ingredient-list-container-inner">
-          <ul id="ingredient-list-all">
-          </ul>
-        </div>
+    <div id="navbar">
+      <div id="hamburger-menu">
+        <div class="hamburger-bar" id="hamburger-bar-top"></div>
+        <div class="hamburger-bar" id="hamburger-bar-middle"></div>
+        <div class="hamburger-bar" id="hamburger-bar-bottom"></div>
       </div>
 
-      <div id="ingredient-list-container-left">
-        <div class="ingredient-list-container-inner">
-          <ul id="ingredient-list-left">
-          </ul>
-        </div>
-      </div>
+      <div id="main-logo">Recipe Book</div>
 
-      <div id="ingredient-list-container-right">
-        <div class="ingredient-list-container-inner">
-          <ul id="ingredient-list-right">
-          </ul>
-        </div>
+      <i id="search-icon" class="fa fa-search" aria-hidden="true"></i>
+      <div id="search-close-icon" class="hide-search-icon">
+        <div class="hamburger-bar" id="search-close-bar-top"></div>
+        <div class="hamburger-bar hide-bar-middle"></div>
+        <div class="hamburger-bar" id="search-close-bar-bottom"></div>
       </div>
     </div>
 
-    <div id="image-container"></div>
+    <div id="navbar-dropdown">
+      <a href="../index.html">
+        <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
+      </a>
+      <div id="dropdown-spacer"></div>
+      <div class="dropdown-button" id="dropdown-right">Find New Recipes</div>
+    </div>
 
-    <div id="recipe-container">
-      <div id="recipe-title">Recipe</div>
-      <ul id="recipe-step-list">
-      </ul>
+    <div id="search-dropdown">
+      <div id="search-bar-container">
+        <form action="javascript:void(0);">
+          <input id="search-bar" type="text" placeholder="Search My Saved Recipes..." />
+          <i id="search-icon-dropdown" class="fa fa-search" aria-hidden="true"></i>
+        </form>
+      </div>
+    </div>
+
+    <div id="body-grid-container">
+      <div id="recipe-title-container"></div>
+      <div id="ingredient-container">
+        <div id="ingredient-title">Ingredients</div>
+
+        <div id="ingredient-list-container-all">
+          <div class="ingredient-list-container-inner">
+            <ul id="ingredient-list-all">
+            </ul>
+          </div>
+        </div>
+
+        <div id="ingredient-list-container-left">
+          <div class="ingredient-list-container-inner">
+            <ul id="ingredient-list-left">
+            </ul>
+          </div>
+        </div>
+
+        <div id="ingredient-list-container-right">
+          <div class="ingredient-list-container-inner">
+            <ul id="ingredient-list-right">
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div id="image-container"></div>
+
+      <div id="recipe-container">
+        <div id="recipe-title">Recipe</div>
+        <ul id="recipe-step-list">
+        </ul>
+      </div>
     </div>
   </div>
+
+  <footer>© 2019 Recipe Book. All rights reserved.</footer>
 
 </body>
 
