--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="recipes/recipe-page-style.css">
+  <link rel="stylesheet" type="text/css" href="recipe-page-style.css">
   <link rel="stylesheet" type="text/css" href="main-style.css">
   <title>Recipe Book</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
