--- a/index.html
+++ b/index.html
@@ -125,10 +125,16 @@
       </div>
 
 
+
     </div>
+
+    <div id="bottom-option-bar">
+      <div id="back-button"></div>
+    </div>
+
   </div>
 
-  <footer>© 2019 Recipe Book. All rights reserved.</footer>
+  <footer id="copyright-footer">© 2019 Recipe Book. All rights reserved.</footer>
 
 </body>
 
