--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
     <div id="bottom-option-bar">
       <div id="back-button"></div>
+      <div id="font-size-button"><span id="font-size-button-span">A</span>A</div>
     </div>
 
   </div>
