--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 </head>
 
 <body>
+
+  <div id="ios-status-bar-background"></div>
+
   <div id="main-content-container">
     <div id="navbar">
       <div id="hamburger-menu">
