--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
   <div id="ios-status-bar-background"></div>
 
+  <div id="body-background"></div>
+
   <div id="main-content-container">
     <div id="navbar">
       <div id="hamburger-menu">
