--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
     <div id="navbar-dropdown">
       <a href="index.html">
-        <div class="dropdown-button" id="dropdown-left">Saved Recipes</div>
+        <div class="dropdown-button" id="dropdown-left" ontouchstart="">Saved Recipes</div>
       </a>
       <div id="dropdown-spacer"></div>
-      <div class="dropdown-button" id="dropdown-right">Find New Recipes</div>
+      <div class="dropdown-button" id="dropdown-right" ontouchstart="">Find New Recipes</div>
     </div>
 
     <div id="search-dropdown">
