--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
       </div>
     </div>
 
+    <div id="body-search-mask"></div>
+
     <div id="body-grid-container">
       <div id="category-container">
         <ul>
