--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div id="body-background"></div>
 
-  <!-- <div id="body-search-mask"></div> -->
+  <div id="body-search-mask"></div>
 
   <div id="main-content-container">
     <div id="navbar">
