SPA-multi-screen-update-1

--- a/index.html
+++ b/index.html
@@ -60,11 +60,9 @@
     </div>
 
     <div id="navbar-dropdown">
-      <a href="index.html">
-        <div class="dropdown-button" id="dropdown-left" ontouchstart="">Saved Recipes</div>
-      </a>
+      <div class="dropdown-button" id="dropdown-button-saved" ontouchstart="">Saved Recipes</div>
       <div id="dropdown-spacer"></div>
-      <div class="dropdown-button" id="dropdown-right" ontouchstart="">Find New Recipes</div>
+      <div class="dropdown-button" id="dropdown-button-find-new" ontouchstart="">Find New Recipes</div>
     </div>
 
     <div id="search-dropdown">
