SPA-multi-screen-update-6

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="main-style.css">
   <link rel="stylesheet" type="text/css" href="displayed-recipe-screen-style.css">
+  <link rel="stylesheet" type="text/css" href="new-recipe-finder-screen-style.css">
   <title>Recipe Book</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -79,7 +80,7 @@
 
 <!-- ====================== BODY GRID CONTAINER START ====================== -->
     <div id="body-grid-container">
-<!-- ===================== SAVED RECIPES SCREEN START ===================== -->
+<!-- =================== SAVED RECIPE LIST SCREEN START =================== -->
       <div id="category-container">
         <ul>
           <div id="category-row-top">
@@ -100,11 +101,11 @@
         <option value="ascending">Alphabetical (A-Z)</option>
         <option value="descending">Alphabetical (Z-A)</option>
       </select>
-<!-- ______________________ SAVED RECIPES SCREEN END ______________________ -->
+<!-- ____________________ SAVED RECIPE LIST SCREEN END ____________________ -->
 
 
 
-<!-- ===================== RECIPE DISPLAY SCREEN START ===================== -->
+<!-- ==================== DISPLAYED RECIPE SCREEN START ==================== -->
       <div id="recipe-title-container"></div>
       <div id="ingredient-container">
         <div id="ingredient-title">Ingredients</div>
@@ -138,7 +139,13 @@
         <ul id="recipe-step-list">
         </ul>
       </div>
-<!-- ______________________ RECIPE DISPLAY SCREEN END ______________________ -->
+<!-- _____________________ DISPLAYED RECIPE SCREEN END _____________________ -->
+
+
+
+<!-- =================== NEW RECIPE FINDER SCREEN START =================== -->
+      <div id="new-recipe-finder-title">New Recipe Finder</div>
+<!-- ____________________ NEW RECIPE FINDER SCREEN END ____________________ -->
     </div>
 <!-- _______________________ BODY GRID CONTAINER END _______________________ -->
 
