--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
 
 <!-- =================== NEW RECIPE FINDER SCREEN START =================== -->
       <div id="new-recipe-finder-title">New Recipe Finder</div>
+
+      <div id="new-recipe-finder-form-container">
+        <form action="javascript:void(0);">
+          <input id="new-recipe-search-bar" type="text" placeholder="Search For New Recipes..." />
+        </form>
+      </div>
 <!-- ____________________ NEW RECIPE FINDER SCREEN END ____________________ -->
     </div>
 <!-- _______________________ BODY GRID CONTAINER END _______________________ -->
