--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
         <form action="javascript:void(0);">
           <input id="new-recipe-search-bar" type="text" placeholder="Search For New Recipes..." />
         </form>
+
+        <div id="new-recipe-search-button">Search</div>
       </div>
 <!-- ____________________ NEW RECIPE FINDER SCREEN END ____________________ -->
     </div>
