SPA-multi-screen-update-20

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <div id="ios-status-bar-background"></div>
   <div id="body-background"></div>
   <div id="body-search-mask"></div>
+  <div id="bottom-option-bar-background"></div>
 
 <!-- ==================== MAIN CONTENT CONTAINER START ==================== -->
   <div id="main-content-container">
