--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     crossorigin="anonymous">
   </script>
   <script type="text/javascript" src="recipe-list-master.js" defer></script>
+  <script src="https://developer.edamam.com/attribution/badge.js" defer></script>
   <script type="text/javascript" src="main-script.js" defer></script>
   <script type="text/javascript" src="navbar-script.js" defer></script>
   <script type="text/javascript" src="index-script.js" defer></script>
@@ -145,12 +146,14 @@
 
 
 <!-- =================== NEW RECIPE FINDER SCREEN START =================== -->
-      <div id="new-recipe-finder-title">New Recipe Finder</div>
+      <div id="new-recipe-finder-title">New Recipe<br>Finder</div>
 
       <div id="new-recipe-finder-form-container">
         <form action="javascript:void(0);">
           <input id="new-recipe-search-bar" type="text" placeholder="Search For New Recipes..." />
         </form>
+
+        <div id="edamam-badge" data-color="transparent"></div>
 
         <div id="new-recipe-search-button">Search</div>
       </div>
