SPA-multi-screen-update-23

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
           <input id="new-recipe-search-bar" type="text" placeholder="Search For New Recipes..." />
         </form>
 
+        <a href="https://www.edamam.com/" target="_blank">
+          <div id="edamam-badge-mask"></div>
+        </a>
         <div id="edamam-badge" data-color="transparent"></div>
 
         <div id="new-recipe-search-button">Search</div>
