--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="search-dropdown">
       <div id="search-bar-container">
         <form action="javascript:void(0);">
-          <input id="search-bar" type="text" placeholder="Search My Saved Recipes..." />
+          <input id="search-bar" type="text" autocomplete="off" placeholder="Search My Saved Recipes..." />
           <i id="search-icon-dropdown" class="fa fa-search" aria-hidden="true"></i>
         </form>
       </div>
@@ -150,7 +150,7 @@
 
       <div id="new-recipe-finder-form-container">
         <form action="javascript:void(0);">
-          <input id="new-recipe-search-bar" type="text" placeholder="Search For New Recipes..." />
+          <input id="new-recipe-search-bar" type="text" autocomplete="off" placeholder="Search For New Recipes..." />
         </form>
 
         <a href="https://www.edamam.com/" target="_blank">
