SPA-multi-screen-update-104

--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 
 
 <!-- ==================== NEW RECIPE LIST SCREEN START ==================== -->
-      <div id="new-recipe-list-title">Browse New Recipes</div>
+      <div id="new-recipe-list-title">Browse New Recipes
+        <a id="edamam-badge-mask-clone-link" href="https://www.edamam.com/" target="_blank"></a>
+      </div>
 <!-- _____________________ NEW RECIPE LIST SCREEN END _____________________ -->
 
 
