SPA-multi-screen-update-115

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
         <a id="edamam-badge-mask-clone-link" href="https://www.edamam.com/" target="_blank"></a>
       </div>
 
-      <div id="new-recipe-search-term-container">
-        <div id="search-term-result-title">Search results for :</div>
-        <div id="search-term-result-term">"food item"</div>
+      <div id="new-recipe-search-result-container">
+        <div id="new-search-result-title">Search results for :</div>
+        <div id="new-search-result-term">"food item"</div>
       </div>
 
       <select id="sort-by-select-new-recipe" value="">
