SPA-multi-screen-update-120

--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
         <option value="ascending">Alphabetical (A-Z)</option>
         <option value="descending">Alphabetical (Z-A)</option>
       </select>
+
+      <div id="new-recipe-search-spinner"></div>
+      <div id="new-recipe-search-spinner-background"></div>
 <!-- _____________________ NEW RECIPE LIST SCREEN END _____________________ -->
 
 
